# cpp-practice

linalg.lib/: .clang-format  .gitignore  CMakeLists.txt  READme.md
linalg.lib/include/linalg/: exceptions.hpp  matrix.hpp
memory/A_polynomial_move_only/: calculator.cpp  solution.cpp
memory/B_intvector_at/: solution.cpp
memory/C_polynomial_cache/: CMakeLists.txt  README.md  poly_cache.h  polynomial.h  solution.cpp  term.h
memory/memory/A_polynomial_move_only/: README.md  poly_calc  polynomial.h
